added links and paginations

--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,1 +1,10 @@
-<h2>I'm a home page</h2>
+<h2>Home Page</h2>
+<ul>
+	<% @links.each do |link| %>
+	<li><%= link_to link.title, link.url %><br /><%= link_to 'comments', link_path(link) %></li>
+	<% end %>
+</ul>
+
+<%= will_paginate @links %>
+
+<%= link_to 'Add a link', new_link_path %>
