--- a/app/views/links/show.html.erb
+++ b/app/views/links/show.html.erb
@@ -1,3 +1,13 @@
 <h2>Link</h2>
 <%= @link.title %>
 <%= @link.url %>
+<hr />
+<h2>Comments</h2>
+<div>
+	<% @link.comments.each do |comment| %>
+		<p><%= comment.message %></p>
+	<% end %>
+</div>
+<hr />
+<h2>Comment</h2>
+<%= render 'comments/form' %>
