added voting feature

--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,7 +1,19 @@
 <h2>Home Page</h2>
 <ul>
 	<% @links.each do |link| %>
-	<li><%= link_to link.title, link.url %><br /><%= link_to 'comments', link_path(link) %></li>
+	<li><%= link_to link.title, link.url %>
+		
+		Votes: [ <%= link.votes.where(:up => true).count - link.votes.where(:up => false).count %> ]
+		
+		<% if current_user.votes.where(:link_id => link.id, :up => true).present? %>
+			<%= '[ * ]' %>
+		<% else %>
+			<%= link_to '[ + ]', votes_path(:vote => { :link_id => link.id, :up => true }), :method => :post %>
+		<% end %>
+
+		<%= link_to '[ - ]', votes_path(:vote => { :link_id => link.id, :up => false}), :method => :post %>
+	<br />
+	<%= link_to 'comments', link_path(link) %></li>
 	<% end %>
 </ul>
 
